k8s_manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatting-prod
  namespace: default
  labels:
    service: chatting-prod
spec:
  type: NodePort
  selector:
    app: chatting-prod
  ports:
  - port: 80        # ClusterIP port
    targetPort: 4444   # Pod port
